# Chudcord

./: CMakeLists.txt  README.md
src/: main.cpp
src/core/: app.cpp  app.hpp
src/discord/: gateway.cpp  gateway.hpp  models.hpp  rest.cpp  rest.hpp
src/ui/: ui.cpp  ui.hpp
